# BIOSTATS

./: .gitignore  LICENSE  README.md  README_pypi.md  Test.txt  eee.py  example.py  example_old.py  launch.py  main.py  main2.py  main_old.py  note.txt  paper.md  penguins.xlsx  pyinstaller.py  requirements.txt  setup.cfg  setup.py  temp.py  test_.py  tips.xlsx  titanic.xlsx  ttt.csv  util.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml  sphinx.yml
biostats/: __init__.py  __main__.py  app.py  data.py  help.py  layout.py  master.py  plot.py  test.py  widget.py
biostats/basic_measurement/: core.py  data.py  graph.py  master.py  statistic.py  test.py
biostats/dataset/: ancova.csv  binomial_test.csv  categorical.csv  chi_square_test.csv  correlation.csv  correlation_matrix.csv  factor_analysis.csv  friedman_test.csv  hsb2.csv  kruskal_wallis_test.csv  mantel_haenszel_test.csv  (+18 more)
biostats_new/: ancova.py  anova.py  anova2.csv  anova3.csv  logit.csv  penguins.csv  regression.csv  regression.py  test.py
biostats_old/: layout.py
docs/: CNAME  conf.py  guide.rst  index.rst  requirements.txt
examples/: example.py
model/: __init__.py  one_sample_t_test.py
notes/: build.md  docs.md  pytest.md  reference.md
paper/: paper.bib  paper.md
tests/: test_anova.py  test_app.py  test_basic.py  test_categorical_plot.py  test_chi_square.py  test_distribution_plot.py  test_exact_test.py  test_linear_regression.py  test_logistic_regression.py  test_multiple_plot.py  test_non_parametric.py  test_others_plot.py  test_others_test.py  test_relational_plot.py  test_t_test.py
(+345 files in other folders)
