[metadata]
name = biostatistics
version = 0.1.1
author = Yeu-Guang Tung
author_email = hikarimusic.tm@gmail.com
description = An intuitive app for statistical analysis
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/hikarimusic/BIOSTATS
project_urls =
    Documentation = https://hikarimusic.github.io/BIOSTATS
    Source Code = https://github.com/hikarimusic/BIOSTATS
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
install_requires =
    factor_analyzer
    matplotlib
    numpy
    openpyxl
    pandas
    pyreadstat
    scikit-learn
    scipy
    seaborn
    statsmodels
    tabulate

[options.entry_points]
console_scripts =
    biostats = biostats.__main__:main

[options.package_data]
* = *.tcl, *.csv, *.png